[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyromb"
version = "0.2.2"
authors = [ 
    { name = "Tom Norman", email = "tom@normcosystems.com" }
]
description = "Runoff Model Builder (Pyromb) is a package used for building RORB and WBNM control files from catchment diagrams built from ESRI shapefiles. Its primary use is in the QGIS plugin Runoff Model: RORB and Runoff Model: WBNM"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "shapely",
    "pyshp",
    "matplotlib",
    "numpy",
    # Add any additional dependencies here
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/norman-tom/pyromb"
"Bug Tracker" = "https://github.com/norman-tom/pyromb/issues"
