[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyromb"]

[tool.hatch.build]
only-packages = true
exclude = [
  ".conda",
]

[project]
name = "pyromb"
version = "0.2.0"
authors = [ 
    { name="Tom Norman", email="tom@normcosystems.com" }
]
description = "Runoff Model Builder (Pyromb) is a package used for building RORB, WBNM, and URBS control files from catchment diagrams built from ESRI shapefiles. Its primary use is in the QGIS plugins Runoff Model: RORB, Runoff Model: WBNM, and Runoff Model: URBS"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/norman-tom/pyromb"
"Bug Tracker" = "https://github.com/norman-tom/pyromb/issues"