[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyromb"]

[tool.hatch.build]
only-packages = true


[project]
name = "pyromb"
version = "0.3.0"
authors = [ 
    { name="Tom Norman", email="tom@ncos.com.au" }
]
description = "Runoff Model Builder (Pyromb) is a package used for building RORB, WBNM, and URBS control files from catchment diagrams built from ESRI shapefiles. Its primary use is in the QGIS plugins 'Runoff Model Builder', though can be used as a standalone Python library"
readme = "README.md"
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/norman-tom/pyromb"
"Bug Tracker" = "https://github.com/norman-tom/pyromb/issues"

[dependency-groups]
dev = [
    "pyshp>=2.3.1",
    "pytest>=8.4.1",
]


[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "dist",
  ".vscode",
  ".github",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]
